Broken state * Removed pVertex from Tessellator * Fully reliant on CurrentVertexPointers * drawArrayVT* functions are broken due to dynamic size nature of mce::VertexFormat

--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -101,12 +101,12 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\SavingWorldScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\SelectWorldScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\Cube.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\ModelPart.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\HumanoidModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\QuadrupedModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\Model.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\PolygonQuad.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\geom\Cube.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\geom\ModelPart.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\HumanoidModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\QuadrupedModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\Model.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\geom\PolygonQuad.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\network\ClientSideNetworkHandler.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\options\Options.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\Controller.hpp" />
@@ -172,15 +172,15 @@
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\FoliageColor.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\GrassColor.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\components\OptionList.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\ChickenModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\CowModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\CreeperModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\PigModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\SheepFurModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\SheepModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\SkeletonModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\SpiderModel.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\model\ZombieModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\ChickenModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\CowModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\CreeperModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\PigModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\SheepFurModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\SheepModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\SkeletonModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\SpiderModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\ZombieModel.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\ChickenRenderer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\CowRenderer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\CreeperRenderer.hpp" />
@@ -207,6 +207,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\GuiElement.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\IntRectangle.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\ScreenRenderer.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\model\geom\TextureOffset.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -241,12 +242,12 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\SavingWorldScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\SelectWorldScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\Cube.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\ModelPart.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\HumanoidModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\QuadrupedModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\Model.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\PolygonQuad.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\geom\Cube.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\geom\ModelPart.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\HumanoidModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\QuadrupedModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\Model.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\geom\PolygonQuad.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\network\ClientSideNetworkHandler.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\options\Options.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\Controller.cpp" />
@@ -313,14 +314,14 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\FoliageColor.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\GrassColor.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\OptionList.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\ChickenModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\CowModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\CreeperModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\PigModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\SheepFurModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\SheepModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\SkeletonModel.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\SpiderModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\ChickenModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\CowModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\CreeperModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\PigModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\SheepFurModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\SheepModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\SkeletonModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\SpiderModel.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\ChickenRenderer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\CowRenderer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\CreeperRenderer.cpp" />
@@ -332,7 +333,7 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\ArrowRenderer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\MouseBuildInput.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\Lighting.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\model\ZombieModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\ZombieModel.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\multiplayer\MultiPlayerLevel.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\LocalPlayer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\multiplayer\MultiplayerLocalPlayer.cpp" />
