--- a/platforms/windows/projects/Client/Client.vcxproj.filters
+++ b/platforms/windows/projects/Client/Client.vcxproj.filters
@@ -99,6 +99,18 @@
     <Filter Include="Header Files\Renderer\Texture">
       <UniqueIdentifier>{936e5c8b-a3b9-4fc8-8d85-b6157dd551b6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Model\Geom">
+      <UniqueIdentifier>{434d2080-ff31-42d1-9c89-39efb6f33153}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Model\Geom">
+      <UniqueIdentifier>{658788db-d839-4212-9afd-66f7e65cffeb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Model\Models">
+      <UniqueIdentifier>{48d498c3-5cea-459c-9417-1b3fef53a2fd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Model\Models">
+      <UniqueIdentifier>{dee8e1cc-9021-48b4-b8ac-f7a3f385cc26}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\client\gui\components\AvailableGamesList.hpp">
@@ -184,18 +196,6 @@
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\gui\Screen.hpp">
       <Filter>Header Files\GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\Cube.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\HumanoidModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\Model.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\PolygonQuad.hpp">
-      <Filter>Header Files\Model</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\Controller.hpp">
       <Filter>Header Files\Player\Input</Filter>
@@ -392,12 +392,6 @@
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\TouchInputHolder.hpp">
       <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\ModelPart.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\QuadrupedModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\GrassColor.hpp">
       <Filter>Header Files\Renderer</Filter>
     </ClInclude>
@@ -427,36 +421,6 @@
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\ChickenRenderer.hpp">
       <Filter>Header Files\Renderer\Entity</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\ZombieModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\ChickenModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\CowModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\CreeperModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\GameMods.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\PigModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\SheepFurModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\SheepModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\SkeletonModel.hpp">
-      <Filter>Header Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\model\SpiderModel.hpp">
-      <Filter>Header Files\Model</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\RocketRenderer.hpp">
       <Filter>Header Files\Renderer\Entity</Filter>
@@ -517,6 +481,57 @@
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\gui\GuiElement.hpp">
       <Filter>Header Files\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\geom\ModelPart.hpp">
+      <Filter>Header Files\Model\Geom</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\ChickenModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\CowModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\CreeperModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\GameMods.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\HumanoidModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\Model.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\PigModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\QuadrupedModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\SheepFurModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\SheepModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\SkeletonModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\SpiderModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\models\ZombieModel.hpp">
+      <Filter>Header Files\Model\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\geom\Cube.hpp">
+      <Filter>Header Files\Model\Geom</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\source\client\model\geom\TextureOffset.hpp">
+      <Filter>Header Files\Model\Geom</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\model\geom\PolygonQuad.hpp">
+      <Filter>Header Files\Model\Geom</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -603,18 +618,6 @@
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\gui\GuiComponent.cpp">
       <Filter>Source Files\GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\PolygonQuad.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\Cube.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\HumanoidModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\Model.cpp">
-      <Filter>Source Files\Model</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\Controller.cpp">
       <Filter>Source Files\Player\Input</Filter>
@@ -811,12 +814,6 @@
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\TouchInputHolder.cpp">
       <Filter>Source Files\Player\Input</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\ModelPart.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\QuadrupedModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\OptionList.cpp">
       <Filter>Source Files\GUI\Components</Filter>
     </ClCompile>
@@ -825,30 +822,6 @@
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\FoliageColor.cpp">
       <Filter>Source Files\Renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\CowModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\ChickenModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\CreeperModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\PigModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\SheepFurModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\SheepModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\SkeletonModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\SpiderModel.cpp">
-      <Filter>Source Files\Model</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\ChickenRenderer.cpp">
       <Filter>Source Files\Renderer\Entity</Filter>
@@ -886,9 +859,6 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\Lighting.cpp">
       <Filter>Source Files\Renderer</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\model\ZombieModel.cpp">
-      <Filter>Source Files\Model</Filter>
-    </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\ArrowRenderer.cpp">
       <Filter>Source Files\Renderer\Entity</Filter>
     </ClCompile>
@@ -918,6 +888,51 @@
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\gui\GuiElement.cpp">
       <Filter>Source Files\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\geom\ModelPart.cpp">
+      <Filter>Source Files\Model\Geom</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\geom\Cube.cpp">
+      <Filter>Source Files\Model\Geom</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\ChickenModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\CowModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\CreeperModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\HumanoidModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\Model.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\PigModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\QuadrupedModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\SheepFurModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\SheepModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\SkeletonModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\SpiderModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\models\ZombieModel.cpp">
+      <Filter>Source Files\Model\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\model\geom\PolygonQuad.cpp">
+      <Filter>Source Files\Model\Geom</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
