--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
                 sudo apt-get install --no-install-recommends -y clang-21
 
           - name: Build iOS IPA
-            run: ./ios-build.sh
+            run: ./platforms/ios/ios-build.sh
             env:
               CLANG: clang-21
               AR: llvm-ar-21
