fix build maybe

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,6 +108,7 @@ jobs:
             env:
               CLANG: clang-21
               AR: llvm-ar-21
+              RANLIB: llvm-ranlib-21
               LIPO: llvm-lipo-21
     android:
         strategy:
