--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,6 +110,7 @@ jobs:
               AR: llvm-ar-21
               RANLIB: llvm-ranlib-21
               LIPO: llvm-lipo-21
+              REMCPE_NO_IPA: 1
     android:
         strategy:
             fail-fast: false
